[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/prefabs/UIs/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/options_theme/options.tres" type="Theme" id=2]

[node name="Options" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.215686, 0.235294, 0.352941 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = 15.0
margin_right = -45.0
margin_bottom = -15.0
all_tabs_in_front = true

[node name="Graphics" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 21.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Container" type="ScrollContainer" parent="TabContainer/Graphics"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 310.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="TabContainer/Graphics/Container"]
margin_right = 508.0
margin_bottom = 293.0
columns = 2

[node name="DisplayModelLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 35 )
text = "Display Mode"
align = 1
valign = 1

[node name="DisplayModelButton" type="OptionButton" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_right = 508.0
margin_bottom = 35.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8
text = "Windowed"
align = 2
items = [ "Windowed", null, false, 0, null, "Borderless Fullscreen", null, false, 1, null, "Fullscreen", null, false, 2, null ]
selected = 0

[node name="DisplaySizeLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_top = 43.0
margin_right = 120.0
margin_bottom = 78.0
rect_min_size = Vector2( 120, 35 )
text = "Display Size"
align = 1
valign = 1

[node name="DisplaySizeButton" type="OptionButton" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_top = 43.0
margin_right = 508.0
margin_bottom = 78.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8
text = "640x360"
align = 2
items = [ "640x360", null, false, 0, null, "960x540", null, false, 1, null, "1280x720", null, false, 2, null, "1440x810", null, false, 3, null, "1600x900", null, false, 4, null, "1920x1080", null, false, 5, null ]
selected = 0

[node name="AntiAlisingLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_top = 86.0
margin_right = 120.0
margin_bottom = 121.0
rect_min_size = Vector2( 120, 35 )
text = "Antialising"
align = 1
valign = 1

[node name="AntiAlisingButton" type="OptionButton" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_top = 86.0
margin_right = 508.0
margin_bottom = 121.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8
text = "None"
align = 2
items = [ "None", null, false, 0, null, "FXAA", null, false, 1, null, "MSAA 2x", null, false, 2, null, "MSAA 4x", null, false, 3, null, "MSAA 8x", null, false, 4, null, "MSAA 16x", null, false, 5, null ]
selected = 0

[node name="BlurEffectLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_top = 129.0
margin_right = 120.0
margin_bottom = 164.0
rect_min_size = Vector2( 120, 35 )
text = "Blur Effect"
align = 1
valign = 1

[node name="BlurEffectButton" type="OptionButton" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_top = 129.0
margin_right = 508.0
margin_bottom = 164.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8
text = "None"
align = 2
items = [ "None", null, false, 0, null, "Low", null, false, 1, null, "Medium", null, false, 2, null, "High", null, false, 3, null, "Ultra", null, false, 4, null ]
selected = 0

[node name="BloomLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_top = 172.0
margin_right = 120.0
margin_bottom = 207.0
rect_min_size = Vector2( 120, 35 )
text = "Bloom"
align = 1
valign = 1

[node name="BloomSwitch" type="CheckButton" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_top = 172.0
margin_right = 508.0
margin_bottom = 207.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8

[node name="VsyncLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_top = 215.0
margin_right = 120.0
margin_bottom = 250.0
rect_min_size = Vector2( 120, 35 )
text = "VSync"
align = 1
valign = 1

[node name="VsyncSwitch" type="CheckButton" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_top = 215.0
margin_right = 508.0
margin_bottom = 250.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8

[node name="MaxFPSLabel" type="Label" parent="TabContainer/Graphics/Container/Grid"]
margin_top = 258.0
margin_right = 120.0
margin_bottom = 293.0
rect_min_size = Vector2( 120, 35 )
text = "Max FPS"
align = 1
valign = 1

[node name="MaxFPS" type="HBoxContainer" parent="TabContainer/Graphics/Container/Grid"]
margin_left = 128.0
margin_top = 258.0
margin_right = 508.0
margin_bottom = 293.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 8

[node name="Label" type="Label" parent="TabContainer/Graphics/Container/Grid/MaxFPS"]
margin_top = 13.0
margin_right = 75.0
margin_bottom = 21.0
rect_min_size = Vector2( 75, 0 )
text = "Unlimited"

[node name="Slider" type="HSlider" parent="TabContainer/Graphics/Container/Grid/MaxFPS"]
margin_left = 83.0
margin_right = 380.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 11
min_value = 30.0
max_value = 300.0
step = 5.0
value = 60.0
tick_count = 30
ticks_on_borders = true

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 11.0

[node name="Container" type="ScrollContainer" parent="TabContainer/Audio"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 310.0
rect_min_size = Vector2( 400, 0 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Grid" type="GridContainer" parent="TabContainer/Audio/Container"]
margin_right = 508.0
margin_bottom = 121.0
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="TabContainer/Audio/Container/Grid"]
margin_top = 2.0
margin_right = 120.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 30 )
text = "Master Volume"
align = 1
valign = 1

[node name="Master" type="HBoxContainer" parent="TabContainer/Audio/Container/Grid"]
margin_left = 128.0
margin_right = 428.0
margin_bottom = 35.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 9
alignment = 2

[node name="Label" type="Label" parent="TabContainer/Audio/Container/Grid/Master"]
margin_top = 2.0
margin_right = 48.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 30 )
align = 1
valign = 1

[node name="Slider" type="HSlider" parent="TabContainer/Audio/Container/Grid/Master"]
margin_left = 56.0
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 11
min_value = -100.0
max_value = 0.0
tick_count = 21
ticks_on_borders = true

[node name="MusicVolumeLabel2" type="Label" parent="TabContainer/Audio/Container/Grid"]
margin_top = 45.0
margin_right = 120.0
margin_bottom = 75.0
rect_min_size = Vector2( 120, 30 )
text = "Music Volume"
align = 1
valign = 1

[node name="Music" type="HBoxContainer" parent="TabContainer/Audio/Container/Grid"]
margin_left = 128.0
margin_top = 43.0
margin_right = 428.0
margin_bottom = 78.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 9
alignment = 2

[node name="Label" type="Label" parent="TabContainer/Audio/Container/Grid/Music"]
margin_top = 2.0
margin_right = 48.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 30 )
align = 1
valign = 1

[node name="Slider" type="HSlider" parent="TabContainer/Audio/Container/Grid/Music"]
margin_left = 56.0
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 11
min_value = -100.0
max_value = 0.0
tick_count = 21
ticks_on_borders = true

[node name="SFXVolumeLabel3" type="Label" parent="TabContainer/Audio/Container/Grid"]
margin_top = 88.0
margin_right = 120.0
margin_bottom = 118.0
rect_min_size = Vector2( 120, 30 )
text = "SFX Volume"
align = 1
valign = 1

[node name="SFX" type="HBoxContainer" parent="TabContainer/Audio/Container/Grid"]
margin_left = 128.0
margin_top = 86.0
margin_right = 428.0
margin_bottom = 121.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 9
alignment = 2

[node name="Label" type="Label" parent="TabContainer/Audio/Container/Grid/SFX"]
margin_top = 2.0
margin_right = 48.0
margin_bottom = 32.0
rect_min_size = Vector2( 48, 30 )
align = 1
valign = 1

[node name="Slider" type="HSlider" parent="TabContainer/Audio/Container/Grid/SFX"]
margin_left = 56.0
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 11
min_value = -100.0
max_value = 0.0
tick_count = 21
ticks_on_borders = true

[node name="Accesbility" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 11.0

[node name="Container" type="ScrollContainer" parent="TabContainer/Accesbility"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 310.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="TabContainer/Accesbility/Container"]
margin_right = 508.0
margin_bottom = 164.0
columns = 2

[node name="ColorblindModeLabel" type="Label" parent="TabContainer/Accesbility/Container/Grid"]
margin_top = 2.0
margin_right = 120.0
margin_bottom = 32.0
rect_min_size = Vector2( 120, 30 )
text = "Colorblind Mode"
align = 1
valign = 1

[node name="ColorblindMode" type="OptionButton" parent="TabContainer/Accesbility/Container/Grid"]
margin_left = 128.0
margin_right = 428.0
margin_bottom = 35.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 9
text = "None"
align = 2
items = [ "None", null, false, 0, null, "Protanopia", null, false, 1, null, "Deuteranopia", null, false, 2, null, "Tritanopia", null, false, 3, null, "Achromatopsia", null, false, 4, null ]
selected = 0

[node name="GlitchEffectLabel" type="Label" parent="TabContainer/Accesbility/Container/Grid"]
margin_top = 42.0
margin_right = 120.0
margin_bottom = 72.0
rect_min_size = Vector2( 120, 30 )
text = "Glitch Effect"
align = 1
valign = 1

[node name="GlitchEffect" type="CheckButton" parent="TabContainer/Accesbility/Container/Grid"]
margin_left = 128.0
margin_top = 42.0
margin_right = 428.0
margin_bottom = 77.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 11
pressed = true

[node name="DisplayFPSLabel" type="Label" parent="TabContainer/Accesbility/Container/Grid"]
margin_top = 80.0
margin_right = 120.0
margin_bottom = 110.0
rect_min_size = Vector2( 120, 30 )
text = "Display FPS"
align = 1
valign = 1

[node name="DisplayFPSButton" type="CheckButton" parent="TabContainer/Accesbility/Container/Grid"]
margin_left = 128.0
margin_top = 80.0
margin_right = 428.0
margin_bottom = 115.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 11

[node name="StaminaBarLabel" type="Label" parent="TabContainer/Accesbility/Container/Grid"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 150.0
rect_min_size = Vector2( 120, 30 )
text = "Stamina Style"
align = 1
valign = 1

[node name="StaminaBar" type="OptionButton" parent="TabContainer/Accesbility/Container/Grid"]
margin_left = 128.0
margin_top = 118.0
margin_right = 428.0
margin_bottom = 153.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 9
text = "Circle"
align = 2
items = [ "Circle", null, false, 0, null, "Bar", null, false, 1, null ]
selected = 0

[node name="TimerLabel" type="Label" parent="TabContainer/Accesbility/Container/Grid"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 150.0
rect_min_size = Vector2( 120, 30 )
text = "Time Display Style"
align = 1
valign = 1

[node name="Timer" type="OptionButton" parent="TabContainer/Accesbility/Container/Grid"]
margin_left = 128.0
margin_top = 118.0
margin_right = 428.0
margin_bottom = 153.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 9
text = "24-hour"
align = 2
items = [ "24-hour", null, false, 0, null, "12-hour", null, false, 1, null ]
selected = 0

[node name="Debug" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 11.0

[node name="Container" type="ScrollContainer" parent="TabContainer/Debug"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 310.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="TabContainer/Debug/Container"]
margin_right = 508.0
margin_bottom = 78.0
columns = 2

[node name="ConsoleLabel" type="Label" parent="TabContainer/Debug/Container/Grid"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Enable Console"
align = 1
valign = 1

[node name="ConsoleButton" type="CheckButton" parent="TabContainer/Debug/Container/Grid"]
margin_left = 128.0
margin_right = 428.0
margin_bottom = 35.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 11

[node name="ExperimentalFeaturesLabel" type="Label" parent="TabContainer/Debug/Container/Grid"]
margin_top = 38.0
margin_right = 120.0
margin_bottom = 68.0
rect_min_size = Vector2( 120, 30 )
text = "Enable EX 
Options"
align = 1
valign = 1

[node name="ExperimentalButton" type="CheckButton" parent="TabContainer/Debug/Container/Grid"]
margin_left = 128.0
margin_top = 38.0
margin_right = 428.0
margin_bottom = 73.0
rect_min_size = Vector2( 380, 35 )
size_flags_horizontal = 11

[node name="Tween" type="Tween" parent="."]

[connection signal="item_selected" from="TabContainer/Graphics/Container/Grid/DisplayModelButton" to="." method="_on_DisplayModelButton_item_selected"]
[connection signal="item_selected" from="TabContainer/Graphics/Container/Grid/DisplaySizeButton" to="." method="_on_DisplaySizeButton_item_selected"]
[connection signal="item_selected" from="TabContainer/Graphics/Container/Grid/AntiAlisingButton" to="." method="_on_AntiAlisingButton_item_selected"]
[connection signal="item_selected" from="TabContainer/Graphics/Container/Grid/BlurEffectButton" to="." method="_on_BlurEffectButton_item_selected"]
[connection signal="toggled" from="TabContainer/Graphics/Container/Grid/BloomSwitch" to="." method="_on_BloomSwitch_toggled"]
[connection signal="toggled" from="TabContainer/Graphics/Container/Grid/VsyncSwitch" to="." method="_on_VsyncSwitch_toggled"]
[connection signal="value_changed" from="TabContainer/Graphics/Container/Grid/MaxFPS/Slider" to="." method="_on_MaxFPSSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Container/Grid/Master/Slider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Container/Grid/Music/Slider" to="." method="_on_MusicVolumeSlider2_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Container/Grid/SFX/Slider" to="." method="_on_SFXVolumeSlider3_value_changed"]
[connection signal="item_selected" from="TabContainer/Accesbility/Container/Grid/ColorblindMode" to="." method="_on_ColorblindMode_item_selected"]
[connection signal="toggled" from="TabContainer/Accesbility/Container/Grid/GlitchEffect" to="." method="_on_GlitchEffect_toggled"]
[connection signal="toggled" from="TabContainer/Accesbility/Container/Grid/DisplayFPSButton" to="." method="_on_DisplayFPSButton_toggled"]
[connection signal="item_selected" from="TabContainer/Accesbility/Container/Grid/StaminaBar" to="." method="_on_StaminaBar_item_selected"]
[connection signal="item_selected" from="TabContainer/Accesbility/Container/Grid/Timer" to="." method="_on_Timer_item_selected"]
[connection signal="toggled" from="TabContainer/Debug/Container/Grid/ConsoleButton" to="." method="_on_ConsoleButton_toggled"]
[connection signal="toggled" from="TabContainer/Debug/Container/Grid/ExperimentalButton" to="." method="_on_ExperimentalButton_toggled"]
